fixed spacing issue between large size cards on show page

--- a/public/css/_ourvariables.scss
+++ b/public/css/_ourvariables.scss
@@ -3,6 +3,7 @@ $almond : #ceafaa;
 $darkblue : #26374c;
 $brown: #ad6134;
 $white: #fff;
+$darkgrey: #999;
 
 //fonts
 $playfair: ('Playfair Display', serif);
