--- a/public/css/sass/materialize.css
+++ b/public/css/sass/materialize.css
@@ -6193,9 +6193,9 @@ input[type=tel]:not(.browser-default):focus:not([readonly]),
 input[type=number]:not(.browser-default):focus:not([readonly]),
 input[type=search]:not(.browser-default):focus:not([readonly]),
 textarea.materialize-textarea:focus:not([readonly]) {
-  border-bottom: 1px solid #26a69a;
-  -webkit-box-shadow: 0 1px 0 0 #26a69a;
-          box-shadow: 0 1px 0 0 #26a69a;
+  border-bottom: 1px solid #455a64;
+  -webkit-box-shadow: 0 1px 0 0 #455a64;
+          box-shadow: 0 1px 0 0 #455a64;
 }
 
 input:not([type]):focus:not([readonly]) + label,
@@ -6211,7 +6211,7 @@ input[type=tel]:not(.browser-default):focus:not([readonly]) + label,
 input[type=number]:not(.browser-default):focus:not([readonly]) + label,
 input[type=search]:not(.browser-default):focus:not([readonly]) + label,
 textarea.materialize-textarea:focus:not([readonly]) + label {
-  color: #26a69a;
+  color: #455a64;
 }
 
 input:not([type]):focus.valid ~ label,
@@ -6553,7 +6553,7 @@ textarea.materialize-textarea + label:after, .select-wrapper + label:after {
 }
 
 .input-field .prefix.active {
-  color: #26a69a;
+  color: #455a64;
 }
 
 .input-field .prefix ~ input,
@@ -7158,7 +7158,7 @@ select {
 }
 
 .select-wrapper input.select-dropdown:focus {
-  border-bottom: 1px solid #26a69a;
+  border-bottom: 1px solid #455a64;
 }
 
 .select-wrapper .caret {
